applications/services/attic/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: attic
  labels:
    managed-by: argocd
