applications/services/attic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attic
  namespace: attic
spec:
  selector:
    app: attic
  ports:
    - name: http
      port: 80
      targetPort: http
